--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "pestphp/pest": "^1.20",
-        "spatie/ray": "^1.28",
-        "vimeo/psalm": "^4.8"
+        "phpstan/phpstan": "^0.12.99",
+        "spatie/ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +37,7 @@
         }
     },
     "scripts": {
-        "psalm": "vendor/bin/psalm",
+        "lint": "vendor/bin/phpstan analyse --level 5 src tests",
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
